# svg2svelte-rs

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: Example.svelte
src/: lib.rs  main.rs
